inicio pagina de noticias

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</header>
 
 	<main style="text-align: center;">
-		<h1>Información sobre covid (?)</h1>
+		<h1><a href="noticias.html">Información sobre covid (?)</a></h1>
 		<h1>Noticias sobre covid(?)</h1>
 		<h1>Información diaria de covid en algún otro formato(?)</h1>
 	</main>
