añadido noticias a navbar y css para noticias

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 		<nav>
 			<a href="index.html">Inicio</a>
 			<a href="tweets.html">Tweets</a>
+			<a href="noticias.html">Noticias</a>
 		</nav>
 	</header>
 
 	<main style="text-align: center;">
-		<h1><a href="noticias.html">Información sobre covid (?)</a></h1>
+		<h1>Información sobre covid (?)</h1>
 		<h1>Noticias sobre covid(?)</h1>
 		<h1>Información diaria de covid en algún otro formato(?)</h1>
 	</main>
