--- a/noticias.html
+++ b/noticias.html
@@ -11,22 +11,26 @@
 		<nav>
 			<a href="index.html">Inicio</a>
 			<a href="tweets.html">Tweets</a>
+			<a href="noticias.html">Noticias</a>
 		</nav>
 	</header>
 
 	<main style="text-align: center;">
         <!--Este widget no aparece en la página-->
-		<div style="margin-top:10px;">
-            <div data-sqwidget="src:http://www.bbc.co.uk/worldservice/widget/live/v2/bbcwswidget-es.js" 
-            data-sqwidget-settings="package:es;" style="padding:0; margin:0; border:none; width:280px" 
-            id="bbc-es-widget-1"></div>
-            <script src="/staticarchive/2e611a202ae2c0da5c18df7dde61433360a4a952.js" type="text/javascript" async="async"></script>
-        </div>
-        <!-- Este deberia mostrar noticias del COVID19, pero carga con un mensaje de error -->
-        <!--
-            <iframe src="https://www.welivesecurity.com/nwa/?e=.vF59iO" 
-            height="950" width="665" style="max-width: 100%;"></iframe>
-        -->
+		<div id="news-container">
+			<div id="news-head">Noticias COVID19</div>
+			<div style="margin-top:10px;">
+				<div data-sqwidget="src:http://www.bbc.co.uk/worldservice/widget/live/v2/bbcwswidget-es.js" 
+				data-sqwidget-settings="package:es;" style="padding:0; margin:0; border:none; width:280px" 
+				id="bbc-es-widget-1"></div>
+				<script src="/staticarchive/2e611a202ae2c0da5c18df7dde61433360a4a952.js" type="text/javascript" async="async"></script>
+			</div>
+			<!-- Este deberia mostrar noticias del COVID19, pero carga con un mensaje de error -->
+			<!--
+				<iframe src="https://www.welivesecurity.com/nwa/?e=.vF59iO" 
+				height="950" width="665" style="max-width: 100%;"></iframe>
+			-->
+		</div>
 	</main>
 </body>
 </html>
