--- a/tweets.html
+++ b/tweets.html
@@ -11,6 +11,7 @@
 		<nav>
 			<a href="index.html">Inicio</a>
 			<a href="tweets.html">Tweets</a>
+			<a href="noticias.html">Noticias</a>
 		</nav>
 	</header>
 
