--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<nav>
 			<a href="index.html">Inicio</a>
 			<a href="tweets.html">Tweets</a>
+			<a href="guia.html">Guía</a>
 		</nav>
 	</header>
 
