--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<header>
-		<div style="font-size: 25px; width: 30%; color: white;">Twitter bot</div>
+		<div style="font-size: 25px; width: 30%; color: white;">COVID Bot</div>
 		<nav>
 			<a href="index.html">Inicio</a>
 			<a href="tweets.html">Tweets</a>
