--- a/index.html
+++ b/index.html
@@ -26,28 +26,32 @@
 				</div>
 				<div style="margin-top: 10px; margin-left: 10px; margin-right: 10px;">
 					<article>
-						<h2>Instrucciones para interactuar con el bot</h2>
-						<p class="txtInstructions">Para que el bot te conteste, tu tweet debe contener lo siguiente:</p>
-						<ol class="olInstructions">
-							<li>Se debe mencionar al bot con @CovidNuevoLeon</li>
-							<li>Se debe mencionar uno de los siguientes comandos: casos, fallecimientos o defunciones</li>
-							<li>Se debe mencionar la fecha que se desea en el siguiente formato: Año/Mes/Día</li>
-						</ol>
-						<br>
-						<br>
-						<h2>Ejemplos</h2>
-						<ol class="olInstructions">
-							<li>@CovidNuevoLeon defunciones 2021/11/22</li>
-							<li>@CovidNuevoLeon casos 2021/11/22</li>
-							<li>@CovidNuevoLeon fallecimientos 2021/11/22</li>
-						</ol>
-						<br>
-						<br>
-						<h2>Consideraciones importantes</h2>
-						<ol class="olInstructions">
-							<li>El comando debe estar en minúsculas</li>
-							<li>El bot regresa las fechas del día anterior si todavía no existen cifras para el día solicitado</li>
-						</ol>
+						<div id="instrucc-cont">
+							<div>
+								<h2>Instrucciones para interactuar con el bot</h2>
+								<p class="txtInstructions">Para que el bot te conteste, tu tweet debe contener lo siguiente:</p>
+								<ol class="olInstructions">
+									<li>Se debe mencionar al bot con @CovidNuevoLeon</li>
+									<li>Se debe mencionar uno de los siguientes comandos: casos, fallecimientos o defunciones</li>
+									<li>Se debe mencionar la fecha que se desea en el siguiente formato: Año/Mes/Día</li>
+								</ol>
+							</div>
+							<div>
+								<h2>Ejemplos</h2>
+								<ol class="olInstructions">
+									<li>@CovidNuevoLeon defunciones 2021/11/22</li>
+									<li>@CovidNuevoLeon casos 2021/11/22</li>
+									<li>@CovidNuevoLeon fallecimientos 2021/11/22</li>
+								</ol>
+							</div>
+							<div>
+								<h2>Consideraciones importantes</h2>
+								<ol class="olInstructions">
+									<li>El comando debe estar en minúsculas</li>
+									<li>El bot regresa las fechas del día anterior si todavía no existen cifras para el día solicitado</li>
+								</ol>
+							</div>
+						</div>
 					</article>
 				</div>
 			</div>
@@ -63,9 +67,8 @@
 					<!-- "data-height" controla el alto del display del timeline -->
 					<!---->
 					<a class="twitter-timeline" href="https://twitter.com/AdrianMReds?ref_src=twsrc%5Etfw"
-						data-width="600" data-height="550">Tweets by AdrianMReds</a>
+						data-width="580" data-height="550">Tweets by AdrianMReds</a>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
 				</article>
 			</div>
 		</div>
