Actualizacion formulario con mail

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 	<main>
 		<section>
 			<div class="containerCont"> 
-				<form action="https://formspree.io/f/myylrqpl" method="post">
+				<form action="https://formspree.io/f/xwkyeejo" method="post">
 
 					<div class="form-group">
 						<label for="nombre">Nombre</label>
