Actualización de feed de tweets e icono de la página

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Ejemplo Twitter</title>
+	<title>Casos Covid Nuevo León</title>
 	<link rel="stylesheet" type="text/css" href="styleTwitter.css">
+	<link rel="icon" href="img/favicon.ico">
 </head>
 
 <body>
@@ -13,7 +14,6 @@
 		<div style="font-size: 25px; width: 30%; color: white;">COVID Bot</div>
 		<nav>
 			<a href="index.html">Inicio</a>
-			<a href="tweets.html">Tweets</a>
 			<a href="contact.html">Contactanos</a>
 		</nav>
 	</header>
@@ -66,9 +66,7 @@
 
 					<!-- "data-height" controla el alto del display del timeline -->
 					<!---->
-					<a class="twitter-timeline" href="https://twitter.com/AdrianMReds?ref_src=twsrc%5Etfw"
-						data-width="580" data-height="550">Tweets by AdrianMReds</a>
-					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+					<a class="twitter-timeline" href="https://twitter.com/CovidNuevoLeon?ref_src=twsrc%5Etfw" data-width="580" data-height="550">Tweets by CovidNuevoLeon</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</article>
 			</div>
 		</div>
