--- a/tweets.html
+++ b/tweets.html
@@ -21,11 +21,7 @@
 		<!-- "data-width" controla el ancho del display del timeline -->
 
 		<!-- "data-height" controla el alto del display del timeline -->
-		<a class="twitter-timeline" href="https://twitter.com/AdrianMReds?ref_src=twsrc%5Etfw"
-		data-width="1000"
-
-		data-height="800"
-		>Tweets by AdrianMReds</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<a class="twitter-timeline" href="https://twitter.com/CovidNuevoLeon?ref_src=twsrc%5Etfw" data-width="1000" data-height="800">Tweets by CovidNuevoLeon</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</main>
 </body>
 </html>
