--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,17 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   	<meta content="utf-8" http-equiv="encoding">
-	<title>Ejemplo Twitter</title>
+	<title>Contáctanos</title>
 	<link rel="stylesheet" type="text/css" href="styleTwitter.css">
+	<link rel="icon" href="img/favicon.ico">
 </head>
 <body>
 	<header>
 		<div style="font-size: 25px; width: 30%; color: white;">COVID Bot</div>
 		<nav>
 			<a href="index.html">Inicio</a>
-			<a href="tweets.html">Tweets</a>
             <a href="contact.html">Contactanos</a>
 		</nav>
 	</header>
