--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
 								<ol class="olInstructions">
 									<li>Se debe mencionar al bot con @CovidNuevoLeon</li>
 									<li>Se debe mencionar uno de los siguientes comandos: casos, fallecimientos o defunciones</li>
+									<li>Se debe mencionar si se desea saber los datos totales o nuevos</li>
 									<li>Se debe mencionar la fecha que se desea en el siguiente formato: Año/Mes/Día</li>
 								</ol>
 							</div>
 							<div>
 								<h2>Ejemplos</h2>
 								<ol class="olInstructions">
-									<li>@CovidNuevoLeon defunciones 2021/11/22</li>
-									<li>@CovidNuevoLeon casos 2021/11/22</li>
-									<li>@CovidNuevoLeon fallecimientos 2021/11/22</li>
+									<li>@CovidNuevoLeon defunciones totales 2021/11/22</li>
+									<li>@CovidNuevoLeon casos totales 2021/11/22</li>
+									<li>@CovidNuevoLeon casos nuevos 2021/11/22</li>
+									<li>@CovidNuevoLeon fallecimientos nuevos 2021/11/22</li>
 								</ol>
 							</div>
 							<div>
@@ -50,6 +52,9 @@
 									<li>El comando debe estar en minúsculas</li>
 									<li>El bot regresa las fechas del día anterior si todavía no existen cifras para el día solicitado</li>
 								</ol>
+							</div>
+							<div>
+								<p>Informacion recuperada de: https://github.com/CSSEGISandData/COVID-19</p>
 							</div>
 						</div>
 					</article>
